kustomized/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-dashboard
spec:
  selector:
    app: crypto-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 5000
