kustomized/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mypython-app
  namespace: ubiowororuki-dev
spec:
  to:
    kind: Service
    name: mypython-app
  port:
    targetPort: 5000
